--- a/package.json
+++ b/package.json
@@ -21,10 +21,14 @@
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
+    "@nebular/eva-icons": "9.0.0",
+    "@nebular/theme": "^9.0.0",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
+    "@progress/kendo-angular-conversational-ui": "^3.0.2",
     "angular-ng-autocomplete": "^2.0.5",
     "angularx-social-login": "^4.0.1",
     "bootstrap": "^5.1.3",
+    "eva-icons": "^1.1.3",
     "html2canvas": "^1.3.2",
     "jquery": "^3.6.0",
     "jspdf": "^2.4.0",
@@ -41,8 +45,10 @@
     "@angular-devkit/build-angular": "~13.0.1",
     "@angular/cli": "~13.0.1",
     "@angular/compiler-cli": "~13.0.0",
+    "@schematics/angular": "~13.0.1",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
+    "api-ai-javascript": "^2.0.0-beta.21",
     "jasmine-core": "~3.10.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
